Fix color contrast for accessibility

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -39,7 +39,7 @@ html {
   --whitergb: 220, 220, 220;
   --black: #2c2c2c;
   --blackrgb: 44, 44, 44;
-  --lightblack: #686868;
+  --lightblack: #424242;
   background-color: var(--white);
   color: var(--black);
   font-family: "AtkinsonHyperlegible", sans-serif;
@@ -52,7 +52,7 @@ html {
     --whitergb: 44, 44, 44;
     --black: #dcdcdc;
     --blackrgb: 220, 220, 220;
-    --lightblack: #a9a9a9;
+    --lightblack: #b8b8b8;
     background-color: var(--white);
     color: var(--black);
   }
